tests/ui/const-generics/mgca/synth-gen-arg-ice-158152.stderr
error: function items cannot be used as const args
  --> $DIR/synth-gen-arg-ice-158152.rs:6:16
   |
LL | impl A<[usize; fn_item]> for () {}
   |                ^^^^^^^

error[E0747]: type provided when a constant was expected
  --> $DIR/synth-gen-arg-ice-158152.rs:9:26
   |
LL | fn fn_item(_: impl Trait<usize>) {}
   |                          ^^^^^
   |
help: if this generic argument was intended as a const parameter, surround it with braces
   |
LL | fn fn_item(_: impl Trait<{ usize }>) {}
   |                          +       +

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0747`.
